--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "scripts": {
-        "start-backend": "cd backend && php -S localhost:8000 -t public",
-        "start-frontend": "cd frontend && npm run dev",
+        "backend": "cd backend && php -S localhost:8000 -t public",
+        "frontend": "cd frontend && npm run dev",
         "install": "cd frontend && npm install && cd ../backend && composer install",
-        "start-all": "cd frontend && npm run dev & cd ../backend && server:start"
+        "start-all": "cd frontend && npm run dev && cd ../backend && server:start"
     }
 }
